--- a/app/views/islands/show.html.erb
+++ b/app/views/islands/show.html.erb
@@ -2,6 +2,7 @@
 <h2><%= @island.name %></h2>
 <p><%= @island.address%></p>
 <p><%= @island.description %></p>
-<%= link_to "Update Island", edit_island_path %>
-<%= link_to "Delete Island", island_path(@island) %>
+<%= link_to "Update", edit_island_path %>
+<!-- <%= link_to "Delete", island_path(@island) %> -->
+<%= link_to "Delete", island_path(@island), method: :delete, data: { confirm: "Are you sure?" } %>
 <%= link_to "Index", islands_path %>
