Updated island index to include links to show pages

--- a/app/views/islands/index.html.erb
+++ b/app/views/islands/index.html.erb
@@ -2,6 +2,7 @@
 
 <ul>
   <% @islands.each do |island| %>
-    <li><%= island.name %></li>
+    <li><%= link_to island.name, island_path(island) %></li>
+
   <% end %>
 </ul>
