added browse button, new create button

--- a/app/views/islands/index.html.erb
+++ b/app/views/islands/index.html.erb
@@ -3,5 +3,6 @@
 <ul>
   <% @islands.each do |island| %>
     <li><%= island.name %></li>
+  <%= link_to "Make a Booking", new_island_booking_path(island)  %>
   <% end %>
 </ul>
