--- a/app/views/islands/new.html.erb
+++ b/app/views/islands/new.html.erb
@@ -1,11 +1,5 @@
 <h5>Create a new island</h5>
 
-<%= simple_form_for [ @island ] do |f| %>
-  <%= f.input :name %>
-  <%= f.input :description %>
-  <%= f.input :address %>
-  <%= f.input :photo, as: :file %>
-  <%= f.submit "Create" %>
-<% end %>
+<%= render "form", island: @island %>
 
 <%= link_to 'Back', root_path %>
