--- a/app/views/islands/show.html.erb
+++ b/app/views/islands/show.html.erb
@@ -1,4 +1,5 @@
 <h1>Island</h1>
+<%= cl_image_tag @island.photo.photo, height: 300, width: 400, crop: :fill %>
 <h2><%= @island.name %></h2>
 <p><%= @island.address%></p>
 <p><%= @island.description %></p>
