--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,5 @@
 <div class="header">
   <h1 id= 'ciao' >TROPIC LIKE IT'S HOT
-  <%= cl_image_tag("pexels-photo-1536428_k65lat",
-      width: 900, height: 300, crop: :fill) %></h1>
-</div>
+  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%=https://res.cloudinary.com/dh6gdchfj/image/upload/v1605701092/pexels-photo-1536428_mfve9d.jpg %>')">
+  </div>
 <p>Find me in app/views/pages/home.html.erb</p>
