--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -3,6 +3,7 @@
   <%= simple_form_for [island, booking ] do |f| %>
   <%= f.input :start_date %>
   <%= f.input :end_date %>
+  <%= f.input :number_of_people %>
   <%= f.submit %>
   <% end %>
 </div>
