--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,18 @@
 .navbar-lewagon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
   justify-content: space-between;
-  background: white;
+  background-color: #1D2D5022;
+  mix-blend-mode: normal;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  font-family: Playfair Display;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 22px;
+  line-height: 64px;
+  color: white;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -9,4 +21,13 @@
 
 .navbar-lewagon .navbar-brand img {
   width: 40px;
+}
+
+.navbar-lewagon .navbar-brand {
+  color: white;
+  font-size: 36px;
+}
+
+.navbar-lewagon .navbar-collapse .navbar-nav .nav-link {
+  color: white;
 }
