--- a/app/views/islands/_form.html.erb
+++ b/app/views/islands/_form.html.erb
@@ -2,6 +2,7 @@
   <%= f.input :name %>
   <%= f.input :description %>
   <%= f.input :address %>
+  <%= f.input :price %>
   <%= f.input :photo, as: :file %>
   <%= f.submit "Create" %>
 <% end %>
