--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,9 @@
-<div class="header">
-  <h1 id= 'ciao' >TROPIC LIKE IT'S HOT
-  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%=https://res.cloudinary.com/dh6gdchfj/image/upload/v1605701092/pexels-photo-1536428_mfve9d.jpg %>')">
+<div>
+  <div class="background" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://res.cloudinary.com/dh6gdchfj/image/upload/v1605701092/pexels-photo-1139040_ckwk85.jpg')">
+    <h1 id='header' >RENT YOUR PRIVATE ISLAND</h1>
+    <div class="topnav">
+      <input type="text" placeholder="Search..">
+    </div>
   </div>
-<p>Find me in app/views/pages/home.html.erb</p>
+</div>
+
