--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,7 +1,6 @@
 .navbar-lewagon {
-  position: absolute;
+  position: sticky;
   top: 0;
-  left: 0;
   width: 100vw;
   justify-content: space-between;
   background-color: #1D2D5022;
@@ -30,4 +29,10 @@
 
 .navbar-lewagon .navbar-collapse .navbar-nav .nav-link {
   color: white;
+}
+
+.navbar-absolute {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
