--- a/app/views/islands/_form.html.erb
+++ b/app/views/islands/_form.html.erb
@@ -4,5 +4,5 @@
   <%= f.input :address %>
   <%= f.input :price %>
   <%= f.input :photos, as: :file, input_html: { multiple: true } %>
-  <%= f.submit "Create" %>
+  <%= f.submit "Create", class: "btn btn-primary btn-lg"%>
 <% end %>
