--- a/app/views/islands/new.html.erb
+++ b/app/views/islands/new.html.erb
@@ -1,5 +1,6 @@
-<h5>Create a new island</h5>
 
-<%= render "form", island: @island %>
-
-<%= link_to 'Back', root_path %>
+<div class="container island-new">
+    <h2>Create a new island</h2>
+    <%= render "form", island: @island %>
+    <%= link_to 'Back', root_path %>
+</div>
