--- a/app/views/islands/index.html.erb
+++ b/app/views/islands/index.html.erb
@@ -1,8 +1,26 @@
-<h1>Islands Index</h1>
+<div class="container">
+  <div class="cards-flex">
+    <% @islands.each do |island| %>
+      <% if island.photo.attached? %>
+        <% url = cl_image_path island.photo.key %>
+      <% else %>
+        <% url = "https://images.unsplash.com/photo-1545579133-99bb5ab189bd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80" %>
+      <% end %>
 
-<ul>
-  <% @islands.each do |island| %>
-    <li><%= link_to island.name, island_path(island) %></li>
-    <%= link_to "Make a Booking", new_island_booking_path(island) %>
-  <% end %>
-</ul>
+
+      <div class="card-island" style="background-image: url(<%= url %>)">
+
+        <h4><%= link_to island.name, island_path(island.id) %></h4>
+        <p><%= island.address %></p>
+      </div>
+    <% end %>
+  </div>
+</div>
+
+
+
+
+<!-- all the islands displayed -->
+
+
+<!-- 1. display the island name -->
