--- a/app/views/islands/index.html.erb
+++ b/app/views/islands/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="cards-flex">
     <% @islands.each do |island| %>
-      <% if island.photo.attached? %>
-        <% url = cl_image_path island.photo.key %>
+      <% if island.photos.any? %>
+        <% url = cl_image_path island.photos.first.key %>
       <% else %>
         <% url = "https://images.unsplash.com/photo-1545579133-99bb5ab189bd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80" %>
       <% end %>
