--- a/app/views/islands/new.html.erb
+++ b/app/views/islands/new.html.erb
@@ -1,6 +1,10 @@
 
 <div class="container island-new">
+  <div class="island-new-input">
     <h2>Create a new island</h2>
     <%= render "form", island: @island %>
+  </div>
+  <div class="link-island-new">
     <%= link_to 'Back', root_path %>
+  </div>
 </div>
