Updated show page fonts

--- a/app/views/islands/show.html.erb
+++ b/app/views/islands/show.html.erb
@@ -1,7 +1,7 @@
 <div class="show-container">
   <div class="island-info">
-    <h2><%= @island.name %></h2>
-    <h3><%= @island.address%></h3>
+    <h2><%= @island.name.upcase %></h2>
+    <h3><%= @island.address.upcase%></h3>
     <div id="island-description">
       <p><%= @island.description %></p>
     </div>
