--- a/app/assets/stylesheets/pages/_island_show.scss
+++ b/app/assets/stylesheets/pages/_island_show.scss
@@ -1,17 +1,26 @@
 h2 {
-font-family: 'Playfair Display', serif;
+font-family: 'Montserrat', sans-serif;
+letter-spacing: 9px;
+font-weight: 300;
 }
 
 h3 {
-  font-size: 18px;
+  font-size: 12px;
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 9px;
+  // font-weight: 300;
+  margin-top: -2px;
+  margin-bottom: 22px;
 }
 
 p {
-  font-size: 12px;
+  font-size: 10px;
+  font-family: 'Libre Franklin', sans-serif;
+  font-weight: 100;
 }
 
 .show-container {
-  margin: 30px;
+  margin: 30px 50px;
 }
 
 .island-info {
