fixed image strech on showpage carousel

--- a/app/assets/stylesheets/pages/_island_show.scss
+++ b/app/assets/stylesheets/pages/_island_show.scss
@@ -19,6 +19,12 @@ p {
   font-weight: 100;
 }
 
+#image {
+  object-fit: cover;
+  height: 300px;
+  width: 350px;
+}
+
 .show-container {
   margin: 30px 50px;
 }
