--- a/app/views/islands/show.html.erb
+++ b/app/views/islands/show.html.erb
@@ -28,7 +28,7 @@
         <% if @island.photos.attached? %>
           <% @island.photos.each_with_index do |photo, index| %>
             <div class="carousel-item <%= index == 0 ? "active" : "" %>">
-              <%= cl_image_tag photo.key, class: "d-block w-100", height: 500, crop: :pad %>
+              <%= cl_image_tag photo.key, class: "d-block w-100", id: "image", height: 400 %>
             </div>
           <% end %>
         <% else %>
