--- a/app/views/islands/index.html.erb
+++ b/app/views/islands/index.html.erb
@@ -1,3 +1,11 @@
+<%= form_tag islands_path, method: :get do %>
+    <%= text_field_tag :query,
+      params[:query],
+      class: "form control",
+      placeholder: "Find an island..."
+    %>
+    <%= submit_tag "Search", class: "btn btn-primary" %>
+    <% end %>
 <div class="container">
   <div class="cards-flex">
     <% @islands.each do |island| %>
