--- a/app/assets/stylesheets/pages/_island_show.scss
+++ b/app/assets/stylesheets/pages/_island_show.scss
@@ -19,6 +19,15 @@ p {
   font-weight: 100;
 }
 
+h4 {
+  font-size: 10px;
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 9px;
+  // font-weight: 300;
+  // margin-top: -2px;
+  margin-bottom: 22px;
+}
+
 #image {
   object-fit: cover;
   height: 300px;
