--- a/app/views/islands/show.html.erb
+++ b/app/views/islands/show.html.erb
@@ -1,22 +1,8 @@
-<div class="show-container">
-  <div class="island-info">
-    <h2><%= @island.name.upcase %></h2>
-    <h3><%= @island.address.upcase%></h3>
-    <div id="island-description">
-      <p><%= @island.description %></p>
-    </div>
-  <!-- Add if statement for only user to update/delete -->
-  <% if current_user == @island.user %>
-    <%= link_to "Update", edit_island_path, class:"btn btn-primary" %>
-    <%= link_to "Delete", island_path(@island), class:"btn btn-primary", method: :delete, data: { confirm: "Are you sure?" } %>
-<!--     <%= link_to "Back", islands_path %> -->
-  <% else %>
-  <!--   <%= link_to "Back", islands_path %> -->
-    <%= link_to "Make a Booking", new_island_booking_path(@island), class:"btn btn-primary"%>
-  <% end %>
-  </div>
+
 
   <!-- Add if statement for photo. Set default image -->
+
+<div class="container">
   <div id="showpage-carousel">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
@@ -44,8 +30,42 @@
         <span class="sr-only">Next</span>
       </a>
   </div>
+  <div class="row">
+    <div class="col">
+      <div class="island-info">
+        <h2><%= @island.name.upcase %></h2>
+        <h3><%= @island.address.upcase%></h3>
+        <div id="island-description">
+          <p><%= @island.description %></p>
+          <h4> | £<%= @island.price %>/DAY |</h4>
+        </div>
+      <!-- Add if statement for only user to update/delete -->
+      <% if current_user == @island.user %>
+        <%= link_to "Update", edit_island_path, class:"btn btn-primary" %>
+        <%= link_to "Delete", island_path(@island), class:"btn btn-primary", method: :delete, data: { confirm: "Are you sure?" } %>
+    <!--     <%= link_to "Back", islands_path %> -->
+      <% else %>
+      <!--   <%= link_to "Back", islands_path %> -->
+        <%= link_to "Make a Booking", new_island_booking_path(@island), class:"btn btn-primary"%>
+      <% end %>
+      </div>
+    </div>
+    <div class="col">
+      <div class="booking-form">
+        <h3>MAKE A BOOKING</h3>
+        <%= render 'bookings/form', island: @island, booking: @booking %>
+      </div>
+    </div>
+  </div>
 </div>
+
+
+
+
+
+
 
 <% @island.bookings.each do |booking| %>
   <p> Booked from <%= booking.start_date.strftime("%A, %b %d") %> to <%= booking.end_date.strftime("%A, %b %d") %> </p>
 <% end %>
+
