--- a/app/views/islands/index.html.erb
+++ b/app/views/islands/index.html.erb
@@ -1,26 +1,56 @@
-<div class="container">
-  <div class="cards-flex">
-    <% @islands.each do |island| %>
-      <% if island.photos.any? %>
-        <% url = cl_image_path island.photos.first.key %>
-      <% else %>
-        <% url = "https://images.unsplash.com/photo-1545579133-99bb5ab189bd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80" %>
+<!--
+<% @islands.each do |island| %>
+  <% if island.photos.any? %>
+    <% url = cl_image_path island.photos.first.key %>
+  <% else %>
+    <% url = "https://images.unsplash.com/photo-1545579133-99bb5ab189bd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80" %>
+  <% end %>
+
+  <h4><%= link_to island.name, island_path(island.id) %></h4>
+  <p><%= island.address %></p>
+<% end %>
+ -->
+
+<div class="total-page-index">
+  <div class="search-number">
+    <h1 id="showing-number">SHOWING <span style="font-size: 49px;"><%= @islands.count.to_s %></span>  ISLANDS</h1>
+  </div>
+
+  <div class="information-index">
+    <div class="listings-container">
+
+      <% @islands.each do |island| %>
+        <div class="big-listing">
+          <div class="listing-image">
+            <img src="https://images.pexels.com/photos/994605/pexels-photo-994605.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+          </div>
+
+          <div class="name-price">
+            <div class="island-name-card">
+              <h2><%= link_to island.name.upcase, island_path(island.id), class: "island-name-link" %></h2>
+            </div>
+            <div class="island-price-card">
+              <h4> <%= island.price %> EUR</h4>
+            </div>
+          </div>
+
+          <div class="island-details">
+            <div>
+              <p>I </p>
+            </div>
+            <div>
+              <p><%= island.description[0, 20] %></p>
+            </div>
+          </div>
+        </div>
       <% end %>
+    </div>
 
-
-      <div class="card-island" style="background-image: url(<%= url %>)">
-
-        <h4><%= link_to island.name, island_path(island.id) %></h4>
-        <p><%= island.address %></p>
+    <div class="map-index">
+      <div id="map"
+       style="width: 100%; height: 600px;"
+       data-markers="<%= @markers.to_json %>"
+       data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
       </div>
-    <% end %>
   </div>
 </div>
-
-
-
-
-<!-- all the islands displayed -->
-
-
-<!-- 1. display the island name -->
