--- a/app/assets/stylesheets/pages/_island_show.scss
+++ b/app/assets/stylesheets/pages/_island_show.scss
@@ -1,4 +1,4 @@
-h2 {
+h2, h3, h4 {
 font-family: 'Montserrat', sans-serif;
 letter-spacing: 9px;
 font-weight: 300;
@@ -6,14 +6,11 @@ font-weight: 300;
 
 h3 {
   font-size: 12px;
-  font-family: 'Montserrat', sans-serif;
-  letter-spacing: 9px;
-  // font-weight: 300;
   margin-top: -2px;
   margin-bottom: 22px;
 }
 
-p {
+p, .booking-form {
   font-size: 10px;
   font-family: 'Libre Franklin', sans-serif;
   font-weight: 100;
@@ -21,11 +18,11 @@ p {
 
 h4 {
   font-size: 10px;
-  font-family: 'Montserrat', sans-serif;
-  letter-spacing: 9px;
-  // font-weight: 300;
-  // margin-top: -2px;
   margin-bottom: 22px;
+}
+
+body {
+  background-color: white;
 }
 
 #image {
@@ -34,17 +31,36 @@ h4 {
   width: 350px;
 }
 
-.show-container {
+.container {
   margin: 30px 50px;
+  text-align: center;
+}
+
+.row {
+  margin-top: 30px;
 }
 
 .island-info {
-  padding: 40px 30px;
-  background-color: white;
+  padding: 0px 16px;
   text-align: center;
   margin-bottom: 10px;
 }
 
 #island-description {
   text-align: justify;
+}
+
+.title {
+  margin-top: 20px;
+}
+
+form.new_booking {
+  input {
+    font-size: 10px;
+  }
+}
+
+#showpage-carousel {
+  width: 600px;
+  margin: auto;
 }
