--- a/app/views/islands/index.html.erb
+++ b/app/views/islands/index.html.erb
@@ -1,16 +1,19 @@
-<%= form_tag islands_path, method: :get do %>
-    <%= text_field_tag :query,
-      params[:query],
-      class: "form control",
-      placeholder: "Find an island..."
-    %>
-    <%= submit_tag "Search", class: "btn btn-primary" %>
-    <% end %>
+
 
 
 <div class="total-page-index">
   <div class="search-number">
     <h1 id="showing-number">SHOWING <span style="font-size: 49px;"><%= @islands.count.to_s %></span>  ISLANDS</h1>
+    <div class="search-bar-index">
+      <%= form_tag islands_path, method: :get do %>
+      <%= text_field_tag :query,
+      params[:query],
+      class: "form control form-search",
+      placeholder: "Find an island..."
+      %>
+      <%= submit_tag "Search", class: "btn-search" %>
+      <% end %>
+    </div>
   </div>
 
   <div class="information-index">
@@ -19,7 +22,11 @@
       <% @islands.each do |island| %>
         <div class="big-listing">
           <div class="listing-image">
-            <img src="https://images.pexels.com/photos/994605/pexels-photo-994605.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+            <% if island.photos.any? %>
+              <%= cl_image_tag island.photos.first.key %>
+            <% else %>
+              <img src="https://images.pexels.com/photos/994605/pexels-photo-994605.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+            <% end %>
           </div>
 
           <div class="name-price">
@@ -27,16 +34,16 @@
               <h2><%= link_to island.name.upcase, island_path(island.id), class: "island-name-link" %></h2>
             </div>
             <div class="island-price-card">
-              <h4> <%= island.price %> EUR</h4>
+              <h4> <%= island.price %> GBP</h4>
             </div>
           </div>
 
           <div class="island-details">
-            <div>
-              <p>I </p>
+            <div class="island-image-icon">
+              <img src="https://i.pinimg.com/originals/74/b4/b6/74b4b6e3299c72aa67967f4d2fd7936c.png" alt="">
             </div>
             <div>
-              <p><%= island.description[0, 20] %></p>
+              <p><%= island.description[0, 150] %></p>
             </div>
           </div>
         </div>
@@ -47,7 +54,8 @@
       <div id="map"
        style="width: 100%; height: 600px;"
        data-markers="<%= @markers.to_json %>"
-       data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
-      </div>
+       data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+       </div>
+    </div>
   </div>
 </div>
