--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,8 +5,9 @@
   <div class="navbar navbar-expand-sm navbar-light navbar-lewagon ">
 <% end %>
 
-  <%= link_to "Tropic Like It's Hot", root_path, class: "navbar-brand" %>
-
+  <div class="home-title">
+  <%= link_to "TROPIC LIKE IT'S HOT", root_path, class: "navbar-brand" %>
+  </div>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -17,29 +18,23 @@
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li class="nav-item">
-          <%= link_to "Browse", islands_path, class: "nav-link" %>
-        </li>
-        <li class="nav-item active">
-          <%= link_to "Home", "#", class: "nav-link" %>
+          <%= link_to "VIEW ALL", islands_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Messages", "#", class: "nav-link" %>
+          <%= link_to "LIST YOU ISLAND", new_island_path, class: "nav-link" %>
         </li>
-        <li class="nav-item dropdown">
-          <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "Account", "#", class: "dropdown-item" %>
-            <%= link_to "Bookings", bookings_path, class: "dropdown-item" %>
-            <%= link_to "List your Island", new_island_path, class: "dropdown-item" %>
-            <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
-          </div>
+        <li class="nav-item">
+          <%= link_to "ACCOUNT", profile_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "LOG OUT", destroy_user_session_path, method: :delete, class: "nav-link" %>
         </li>
       <% else %>
         <li class="nav-item">
-          <%= link_to "Sign Up", new_user_registration_path, class: "nav-link" %>
+          <%= link_to "SIGN UP", new_user_registration_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+          <%= link_to "LOGIN", new_user_session_path, class: "nav-link" %>
         </li>
       <% end %>
     </ul>
