--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -15,4 +15,22 @@
 
 .btn-search:hover {
   border: 1px solid #8E004C;
+  transition: all 0.5s ease;
+}
+
+.btn-search-home{
+  color: #121730;
+  border: 3px solid white;
+  background-color: white;
+  padding: 12px 19px;
+  font-style: italic;
+  font-family: "Libre Franklin", "sans-serif";
+  letter-spacing: 2px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+#form-search-home{
+  color: white;
+  border: 3px solid white;
 }
