--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,73 @@
+.home-page-container {
+  max-width: 100%;
+}
+
+.featured-islands {
+  display: flex;
+  margin-top: 48px;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 100px;
+}
+
+.fave-islands {
+  margin-bottom: 40px;
+  border-bottom: 4px solid #E7E7EA;
+  padding-bottom: 24px;
+}
+
+.island-cards{
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+}
+
+.featured-islands img {
+  width: 400px;
+  height: 600px;
+  object-fit: cover;
+  transition: transform 0.6s ease;
+  border-radius: 5px;
+  z-index: -1;
+}
+
+.fi-image img:hover {
+  // transition: all 0.5s ease;
+  box-shadow: 0 0px 55px rgba(0, 0, 0, 0.4);
+  transform: translate(0px, -20px) scale(1.03);
+  background: black;
+  z-index: 0;
+}
+
+.fi-text-js {
+  opacity: 0;
+}
+
+.opacity {
+  opacity: 1;
+}
+
+.fi-text-js {
+  margin-top: -190px;
+  z-index: 3;
+  position: relative;
+  background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(0,0,0,0.7903536414565826) 87%);
+  color: white;
+  width: 408px;
+  padding-bottom: 60px;
+  padding-top: 80px;
+  border-radius: 5px;
+}
+
+.fi-card {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 400px;
+}
+
+
+
+
+
 
