--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,38 +1,35 @@
 .navbar-lewagon {
-  position: sticky;
-  top: 0;
+  display: flex;
+  justify-content: center;
   width: 100vw;
-  justify-content: space-between;
-  background-color: #1D2D5022;
-  mix-blend-mode: normal;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  font-family: Playfair Display;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 22px;
-  line-height: 64px;
-  color: white;
+  background-color: transparent;
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 9px;
+  font-weight: 300;
 }
 
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
-}
-
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
-}
-
-.navbar-lewagon .navbar-brand {
-  color: white;
-  font-size: 36px;
-}
-
-.navbar-lewagon .navbar-collapse .navbar-nav .nav-link {
-  color: white;
-}
+// .navbar-lewagon .navbar-collapse .navbar-nav .nav-link {
+//   color: white;
+// }
 
 .navbar-absolute {
   position: absolute;
   top: 0;
   left: 0;
+}
+
+.nav-link {
+  font-size: 10px;
+}
+
+.nav-link:hover {
+  color: #8E004C;
+}
+
+.nav-item {
+  margin: 0 5px;
+}
+
+.navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
+  color: #8E004C;
 }
