--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,24 +4,21 @@
 <% else %>
   <div class="navbar navbar-expand-sm navbar-light navbar-lewagon ">
 <% end %>
-
-  <div class="home-title">
-  <%= link_to "TROPIC LIKE IT'S HOT", root_path, class: "navbar-brand" %>
-  </div>
-
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<!--   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-
-
+ -->
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
+       <li class="nav-item">
+          <%= link_to "HOME", root_path, class: "nav-link" %>
+        </li>
         <li class="nav-item">
           <%= link_to "VIEW ALL", islands_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
-          <%= link_to "LIST YOU ISLAND", new_island_path, class: "nav-link" %>
+          <%= link_to "LIST YOUR ISLAND", new_island_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <%= link_to "ACCOUNT", profile_path, class: "nav-link" %>
