cleared up some search bars

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -11,11 +11,15 @@
   letter-spacing: 2px;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
+  transition: 0.5s ease;
 }
 
 .btn-search:hover {
-  border: 1px solid #8E004C;
+  background-color: #121730;
+  border: 1px solid #121730;
   transition: all 0.5s ease;
+  font-weight: bold;
+  color: white;
 }
 
 .btn-search-home{
@@ -28,9 +32,16 @@
   letter-spacing: 2px;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
+  transition: 0.5s ease;
+}
+
+.btn-search-home:hover{
+  background-color: #EBEBEB;
+  border: 3px solid #EBEBEB;
 }
 
 #form-search-home{
   color: white;
   border: 3px solid white;
+  outline: none;
 }
