--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,7 +6,7 @@
 <% end %>
 
   <div class="home-title">
-  <%= link_to "TROPIC LIKE IT'S HOT", root_path, class: "navbar-brand" %>
+  <%= link_to "TROPIC LIKE IT'S HOT", root_path, class: "navbar-brand", id:"home-buton" %>
   </div>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
