--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -3,13 +3,10 @@
   letter-spacing: 9px;
 }
 
-
-
-
 .banner {
   width: 100%;
   height: 100vh;
-  background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.3)), url('https://res.cloudinary.com/dh6gdchfj/image/upload/v1605701092/pexels-photo-1139040_ckwk85.jpg');
+  background-image: linear-gradient(rgba(0,0,0,0.85), rgba(0,0,0,0.2)), url('https://res.cloudinary.com/dh6gdchfj/image/upload/v1605701092/pexels-photo-1139040_ckwk85.jpg');
   background-size: cover;
   display: flex;
   justify-content: center;
@@ -41,6 +38,7 @@
   color: #FFFFFF;
   text-align: left;
   letter-spacing: 5px;
+  height: 70px;
 }
 
 .form-control {
