--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -3,10 +3,9 @@
   top: 0;
   width: 100vw;
   justify-content: space-between;
-  background-color: #1D2D5022;
+  background-color: transparent;
   mix-blend-mode: normal;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  font-family: Playfair Display;
+  font-family: "Montserrat";
   font-style: normal;
   font-weight: bold;
   font-size: 22px;
@@ -24,7 +23,7 @@
 
 .navbar-lewagon .navbar-brand {
   color: white;
-  font-size: 36px;
+  font-size: 15px;
 }
 
 .navbar-lewagon .navbar-collapse .navbar-nav .nav-link {
@@ -35,4 +34,20 @@
   position: absolute;
   top: 0;
   left: 0;
+  padding: 0px 16px;
 }
+
+.nav-item a{
+  font-size: 15px;
+  padding: 0px;
+  margin-right: 12px;
+}
+
+.navbar-brand {
+  margin-left: 8px;
+}
+
+#home-buton:hover{
+  color: white;
+}
+
