--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -35,7 +35,6 @@
   // transition: all 0.5s ease;
   box-shadow: 0 0px 55px rgba(0, 0, 0, 0.4);
   transform: translate(0px, -20px) scale(1.03);
-  background: black;
   z-index: 0;
 }
 
@@ -64,6 +63,10 @@
   align-items: center;
   flex-direction: column;
   width: 400px;
+}
+
+::placeholder{
+  color:white;
 }
 
 
