seach button colours and scroll reveal

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -3,7 +3,7 @@
 }
 
 .btn-search {
-  border: 1px solid #E7E7EA;
+  border: 1px solid #121730;
   padding: 12px 19px;
   background-color: transparent;
   font-style: italic;
