--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -44,6 +44,7 @@ a:hover{
 .listing-image img {
   width: 100%;
   object-fit: cover;
+  box-shadow: 0 0px 55px rgba(0, 0, 0, 0.3);
 }
 
 .name-price {
