--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,10 +1,14 @@
+body {
+  background-color: #F2F2F2;
+}
+
 .home-page-container {
   max-width: 100%;
 }
 
 .featured-islands {
   display: flex;
-  margin-top: 48px;
+  margin-top: 90px;
   flex-direction: column;
   align-items: center;
   margin-bottom: 100px;
