--- a/app/assets/stylesheets/pages/_islands.scss
+++ b/app/assets/stylesheets/pages/_islands.scss
@@ -49,7 +49,7 @@ h1 {
 }
 
 .form-search {
-  border: 1px solid #E7E7EA;
+  border: 1px solid #121730;
   padding: 12px 205px 12px 16px;
   background-color: transparent;
   font-style: italic;
@@ -72,8 +72,9 @@ h1 {
   margin-right: 16px;
 }
 
-::placeholder {
+#form-placeholder::placeholder {
 outline: none;
+color: #121730;
 }
 
 
