--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;1,100&family=Montserrat:wght@400&display=swap" rel="stylesheet">
-
+    <script src="https://unpkg.com/scrollreveal"></script>
   </head>
 
   <body>
