--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -52,7 +52,7 @@
           <img class="image-js" src="https://images.unsplash.com/photo-1529420705456-5c7e04dd043d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80" alt="">
         </div>
         <div class="fi-text">
-          <h2 class="fi-text-js text-center">KOH TAO</h2>
+          <h2 class="fi-text-js text-center">KOH TAO Hello</h2>
         </div>
       </div>
     </div>
