--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
 <% if params[:controller] == 'pages' && params[:action] == 'home' %>
   <div class="navbar navbar-expand-sm navbar-light navbar-lewagon  navbar-absolute">
 <% else %>
-  <div class="navbar navbar-expand-sm navbar-light navbar-lewagon ">
+  <div class="navbar navbar-expand-sm navbar-lewagon black-links" >
 <% end %>
 
   <div class="home-title">
@@ -37,3 +37,11 @@
     </ul>
   </div>
 </div>
+
+<!-- <style>
+.navbar-brand,
+.nav-item a {
+  color: black !important;
+}
+</style>
+ -->
