--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,23 +27,28 @@
     <div class="fave-islands">
       <h2>OUR FAVOURITE ISLANDS</h2>
     </div>
-
     <div class="island-cards">
+   <% @islands.first(3).each do |island| %>
       <div class="fi-card">
         <div class="fi-image">
-          <img src="https://images.pexels.com/photos/1536428/pexels-photo-1536428.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="">
+          <% if island.photos.any? %>
+              <%= cl_image_tag island.photos.first.key %>
+          <% else %>
+              <img src="https://images.pexels.com/photos/994605/pexels-photo-994605.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+          <% end %>
         </div>
         <div class="fi-text">
-          <h2 class="fi-text-js text-center">KOH LIPE</h2>
+          <h2 class="fi-text-js text-center"><%= island.name %></h2>
         </div>
       </div>
+    <% end %>
 
-      <div class="fi-card">
+      <!-- <div class="fi-card">
         <div class="fi-image">
           <img src="https://images.unsplash.com/photo-1529333241880-9558d5e5e064?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=716&q=80" alt="">
         </div>
         <div class="fi-text">
-          <h2 class="fi-text-js text-center">CUBA</h2>
+          <h2 class="fi-text-js text-center"><%= @islands.sample.name %></h2>
         </div>
       </div>
 
@@ -52,10 +57,18 @@
           <img class="image-js" src="https://images.unsplash.com/photo-1529420705456-5c7e04dd043d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80" alt="">
         </div>
         <div class="fi-text">
-          <h2 class="fi-text-js text-center">KOH TAO</h2>
+          <h2 class="fi-text-js text-center"><%= @islands.sample.name %></h2>
         </div>
-      </div>
+      </div> -->
     </div>
 
   </div>
 </div>
+
+<% 3.times do %>
+  <%= @islands.sample.name %>
+<% end %>
+
+
+
+
