--- a/app/views/islands/new.html.erb
+++ b/app/views/islands/new.html.erb
@@ -1,5 +1,5 @@
 
-<div class="container island-new">
+<div class="island-new">
   <div class="island-new-input">
     <h2>Create a new island</h2>
     <%= render "form", island: @island %>
