--- a/app/assets/stylesheets/pages/_island_new.scss
+++ b/app/assets/stylesheets/pages/_island_new.scss
@@ -1,10 +1,21 @@
-.island-new{
+.island-new-input{
   margin-top: 24px;
   box-shadow: 0px 0px 26px -8px rgba(0,0,0,0.3);
   padding: 32px 48px;
   margin-bottom: 48px;
   border-radius: 16px;
+  margin: auto !important;
   width: 50%;
+  text-align: center;
+  text-transform: uppercase;
+
+}
+
+.form-control {
+  border: 0;
+    outline: 0;
+    border-bottom: 0.7px solid #C9C9C9;
+    background: transparent;
 }
 
 .btn {
@@ -15,3 +26,5 @@
 .link-island-new {
   padding-top: 8px;
 }
+
+
