updated button on create page

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -45,3 +45,9 @@
   border: 3px solid white;
   outline: none;
 }
+
+.button-radius {
+  border-radius: 0px;
+  padding: 12px 100px;
+  margin-top: 24px;
+}
