--- a/app/views/islands/_form.html.erb
+++ b/app/views/islands/_form.html.erb
@@ -4,5 +4,5 @@
   <%= f.input :address %>
   <%= f.input :price %>
   <%= f.input :photos, as: :file, input_html: { multiple: true } %>
-  <%= f.submit "Submit", class: "btn btn-primary btn-lg"%>
+  <%= f.submit "Submit", class: "btn-search btn-search-index button-radius"%>
 <% end %>
