--- a/app/assets/stylesheets/pages/_island_show.scss
+++ b/app/assets/stylesheets/pages/_island_show.scss
@@ -4,21 +4,24 @@ letter-spacing: 9px;
 font-weight: 300;
 }
 
+h2 {
+  font-size: 40px;
+}
+
 h3 {
-  font-size: 12px;
+  font-size: 18px;
   margin-top: -2px;
   margin-bottom: 22px;
 }
 
 p, .booking-form {
-  font-size: 10px;
+  font-size: 14px;
   font-family: 'Libre Franklin', sans-serif;
   font-weight: 100;
 }
 
 h4 {
-  font-size: 10px;
-  margin-bottom: 22px;
+  font-size: 14px;
 }
 
 body {
@@ -27,17 +30,18 @@ body {
 
 #image {
   object-fit: cover;
-  height: 300px;
-  width: 350px;
+  height: 600px;
+  width: 300px;
 }
 
 .container {
-  margin: 30px 50px;
+  // margin: 30px 50px;
   text-align: center;
+  margin-bottom: 50px;
 }
 
-.row {
-  margin-top: 30px;
+.row.info {
+  margin-top: 45px;
 }
 
 .island-info {
@@ -62,6 +66,14 @@ form.new_booking {
 }
 
 #showpage-carousel {
-  width: 600px;
   margin: auto;
+  height: auto;
+}
+
+.fields {
+  margin: 0 60px;
+}
+
+#price {
+  margin: 30px auto;
 }
