--- a/app/views/islands/show.html.erb
+++ b/app/views/islands/show.html.erb
@@ -21,6 +21,7 @@
           <%= image_tag "https://images.unsplash.com/photo-1545579133-99bb5ab189bd?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80", class: "d-block w-100" %>
         <% end %>
       </div>
+    </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
@@ -30,12 +31,12 @@
         <span class="sr-only">Next</span>
       </a>
   </div>
-  <div class="row">
+  <div class="row info">
     <div class="col-7">
       <div class="island-info">
         <h3>DESCRIPTION</h3>
         <p id="island-description"><%= @island.description %></p>
-        <h4> | £<%= @island.price %>/NIGHT |</h4>
+        <h4 id="price"> | £<%= @island.price %>/NIGHT |</h4>
       <!-- Add if statement for only user to update/delete -->
       <% if current_user == @island.user %>
         <%= link_to "Update", edit_island_path, class:"btn btn-primary" %>
@@ -49,7 +50,9 @@
     <div class="col-5">
       <div class="booking-form">
         <h3>BOOKING</h3>
-        <%= render 'bookings/form', island: @island, booking: @booking %>
+        <div class="fields">
+          <%= render 'bookings/form', island: @island, booking: @booking %>
+        </div>
       </div>
     </div>
   </div>
