--- a/app/assets/stylesheets/pages/_island_new.scss
+++ b/app/assets/stylesheets/pages/_island_new.scss
@@ -8,7 +8,7 @@
   width: 50%;
   text-align: center;
   text-transform: uppercase;
-
+  color: #121730;
 }
 
 .form-control {
@@ -25,6 +25,10 @@
 
 .link-island-new {
   padding-top: 8px;
+  padding-bottom: 8px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #121730;
 }
 
 
