--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TropicLikeItsHot</title>
+    <title>Tropic Like It's Hot</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -13,6 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;1,100&family=Montserrat:wght@400&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/scrollreveal"></script>
+    <link rel="icon" href="https://www.flaticon.com/svg/static/icons/svg/1238/1238950.svg"/>
   </head>
 
   <body>
