--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -45,3 +45,26 @@
   border: 3px solid white;
   outline: none;
 }
+
+.btn-island-new {
+  border-radius: 0px;
+  padding: 12px 100px;
+}
+
+
+.btn-smaller {
+  padding: 12px 40px;
+  margin-top: 30px;
+}
+
+#button-update {
+  margin-right: 40px;
+}
+
+#button-delete {
+  margin-left: 40px;
+}
+
+#button-delete:hover {
+  background-color: #8E004C;
+}
