--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -3,5 +3,5 @@
   <%= f.input :start_date, as: :date, html5: true %>
   <%= f.input :end_date, as: :date, html5: true %>
   <%= f.input :number_of_people, input_html: { class: "inline-element" } %>
-  <%= f.submit "Book", class: "btn btn-primary btn-lg inline-element" %>
+  <%= f.submit "Book", class: "btn-search btn-search-index btn-island-new" %>
   <% end %>
