--- a/app/views/islands/index.html.erb
+++ b/app/views/islands/index.html.erb
@@ -11,7 +11,7 @@
       class: "form control form-search", id: "form-placeholder",
       placeholder: "Find an island..."
       %>
-      <%= submit_tag "Search", class: "btn-search btn-search-index" %>
+      <%= submit_tag "Search", class: "btn-search btn-search-index btn-island-new" %>
       <% end %>
     </div>
   </div>
