--- a/app/assets/stylesheets/pages/_confirmation.scss
+++ b/app/assets/stylesheets/pages/_confirmation.scss
@@ -1,4 +1,5 @@
 .checkout {
+  justify-content: center;
   display: flex;
   margin-bottom: 48px;
 }
@@ -6,53 +7,55 @@
 .checkout-details{
   width: 70%;
   padding: 32px;
-  border: 1px solid grey;
-  border-radius: 8px;
+  border-radius: 16px;
   margin-right: 32px;
-  box-shadow: 0px 0px 26px -8px rgba(0,0,0,0.4);
+  box-shadow: 0px 0px 26px -8px rgba(0,0,0,0.3);
 }
 
 .host-details {
   width: 30%;
-  border: 1px solid grey;
-  border-radius: 8px;
+  border-radius: 16px;
   padding: 24px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  box-shadow: 0px 0px 26px -8px rgba(0,0,0,0.4);
+  box-shadow: 0px 0px 26px -8px rgba(0,0,0,0.3);
 }
 
 .confirmation-message {
   margin-top: 24px;
   margin-bottom: 24px;
+  font-size: 48px !important;
+}
+
+#you-are-going {
+  text-transform: uppercase;
 }
 
 .check-guests {
   display: flex;
+  height: 70px;
   justify-content: space-between;
-  align-items: center;
   border-bottom: 1px solid grey;
-  padding-top: 40px;
-  padding-bottom: 40px;
-}
-
-.check-guests {
-  margin-top: 16px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .check-dates {
   display: flex;
+  height: 70px;
   justify-content: space-between;
   border-bottom: 1px solid grey;
-  padding-top: 40px;
-  padding-bottom: 40px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .address {
   display: flex;
-  padding-top: 40px;
-  padding-bottom: 40px;
+  height: 70px;
+  justify-content: space-between;
+  // padding-top: 40px;
+  // padding-bottom: 40px;
 }
 
 .address-listing{
@@ -88,4 +91,31 @@ a {
   font-size: 18px;
 }
 
+.confirmation {
+  margin: auto !important;
+  width: 80%;
+  text-align: center;
+  color: #121730;
+  padding-bottom: 220px;
+  padding-top: 60px;
+}
 
+#island-image {
+  width: 100%;
+  border-radius: 16px;
+}
+.booking-details{
+  padding-top: 48px;
+  padding-bottom: 24px;
+}
+
+h1 {
+  font-size: 14px;
+}
+
+h6 {
+  font-size: 10px;
+  text-align: center;
+  padding: 0px;
+  margin: 0px;
+}
