--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -30,7 +30,7 @@
                   input_html: { autocomplete: "new-password" } %>
     </div>
 
-    <div class="form-actions">
+    <div class="btn-search btn-search-index btn-island-new">
       <%= f.button :submit, "Sign up" %>
     </div>
   <% end %>
