fixed buttons on card

--- a/app/assets/stylesheets/pages/_island_show.scss
+++ b/app/assets/stylesheets/pages/_island_show.scss
@@ -56,7 +56,7 @@ body {
   margin-top: 10px;
   box-shadow: 0 0px 55px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
-  height: 550px;
+  min-height: 550px;
 }
 
 #island-description {
